# pyteseo

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README_pypi.md  environment-dev.yml  environment.yml  pyproject.toml  test_install.yml
.github/workflows/: build_documentation.yml  docs.yml  documentation.yml  static.yml  test_environments.yml  test_installation.yml  tests.yml
docs/: conf.py  get-started.md  index.md  user-guide.md
docs/_build/doctrees/: changelog.doctree  environment.pickle  get-started.doctree  index.doctree  user-guide.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/pyteseo/: index.doctree
docs/_build/doctrees/autoapi/pyteseo/cli/: index.doctree
docs/_build/doctrees/autoapi/pyteseo/config/: index.doctree
docs/_build/doctrees/autoapi/pyteseo/export/: index.doctree
docs/_build/doctrees/autoapi/pyteseo/io/: index.doctree
docs/_build/doctrees/autoapi/pyteseo/plot/: index.doctree
docs/_build/doctrees/autoapi/pyteseo/tests/: index.doctree
docs/_build/doctrees/nbsphinx/notebooks/: 01_create_domain.ipynb  01_read_domain.ipynb  02_create_forcings.ipynb  02_read_forcings.ipynb  03_floater_simulation.ipynb  04_oil_simulation.ipynb  05_hns_simulation.ipynb  06_stochastic_montecarlo.ipynb  07_stochastic_kmeans.ipynb
docs/_build/doctrees/notebooks/: 01_create_domain.doctree  01_read_domain.doctree  02_create_forcings.doctree  02_read_forcings.doctree  03_floater_simulation.doctree  04_oil_simulation.doctree  05_hns_simulation.doctree  06_stochastic_montecarlo.doctree  07_stochastic_kmeans.doctree
docs/_build/html/: .buildinfo  changelog.html  genindex.html  get-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  user-guide.html
docs/_build/html/_sources/: changelog.md.txt  get-started.md.txt  index.md.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/pyteseo/: index.rst.txt
docs/_build/html/_sources/notebooks/: 01_read_domain.ipynb.txt  03_floater_simulation.ipynb.txt  05_hns_simulation.ipynb.txt  06_stochastic_montecarlo.ipynb.txt
docs/_build/html/_static/: documentation_options.js
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/pyteseo/: index.html
docs/_build/html/autoapi/pyteseo/cli/: index.html
docs/_build/html/autoapi/pyteseo/config/: index.html
docs/_build/html/autoapi/pyteseo/export/: index.html
docs/_build/html/autoapi/pyteseo/io/: index.html
docs/_build/html/autoapi/pyteseo/plot/: index.html
docs/_build/html/notebooks/: 01_create_domain.html  01_read_domain.html  01_read_domain.ipynb  02_create_forcings.html  02_create_forcings.ipynb  02_read_forcings.html  02_read_forcings.ipynb  03_floater_simulation.html  03_floater_simulation.ipynb  04_oil_simulation.html  04_oil_simulation.ipynb  05_hns_simulation.html  05_hns_simulation.ipynb  06_stochastic_montecarlo.html  06_stochastic_montecarlo.ipynb  07_stochastic_kmeans.html  07_stochastic_kmeans.ipynb
docs/notebooks/: 01_create_domain.ipynb  01_read_domain.ipynb  02_create_forcings.ipynb  02_read_forcings.ipynb  03_floater_simulation.ipynb  04_oil_simulation.ipynb  07_stochastic_kmeans.ipynb
notebooks/01_domain_generation/: grid_from_GEBCO.ipynb
notebooks/forcing_generation/: winds_from_CMEMS_GLOBAL.ipynb
pyteseo/: __init__.py  cli.py  config.py  export.py  io.py  plot.py  setup.py
pyteseo/tests/: __init__.py  test_io.py
pyteseo/tests/data/: cas1_grid_001_000005.txt  cas1_grid_001_000015.txt  cas1_grid_001_000020.txt  cas1_grid_001_000025.txt  cas1_grid_001_000035.txt  cas1_grid_001_000060.txt  cas1_grid_001_000065.txt  cas1_grid_001_000075.txt  cas1_grid_001_000080.txt  cas1_grid_001_000085.txt  cas1_grid_001_000090.txt  cas1_grid_002_000000.txt  cas1_grid_002_000010.txt  cas1_grid_002_000030.txt  cas1_grid_002_000040.txt  cas1_grid_002_000045.txt  cas1_grid_002_000050.txt  cas1_grid_002_000055.txt  cas1_grid_002_000070.txt  cas1_particles_000000.txt  cas1_particles_000005.txt  cas1_particles_000010.txt  cas1_particles_000015.txt  cas1_particles_000020.txt  cas1_particles_000025.txt  cas1_particles_000030.txt  cas1_particles_000035.txt  cas1_particles_000040.txt  cas1_particles_000045.txt  cas1_particles_000050.txt  cas1_particles_000055.txt  cas1_particles_000060.txt  cas1_particles_000065.txt  cas1_particles_000070.txt  cas1_particles_000075.txt  cas1_particles_000080.txt  cas1_particles_000085.txt  cas1_particles_000090.txt  cas1_properties_002.txt  currents_000h_error_range.txt  (+12 more)
tests/: __init__.py  test_io.py
(+19 files in other folders)
