[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "pyteseo"
authors = [{name = "German Aragon Caminero", email = "german.aragon@unican.es"}]
mantainers = [{name = "German Aragon Caminero", email = "german.aragon@unican.es"}]
readme = "README.md"
requires-python = "3.10"
classifiers = ["Topic :: Scientific/Engineering", "Programming Language :: Python"]
dynamic = ["version", "description"]

dependencies = [
    "numpy",
    "pandas",
    "xarray[complete]",
    "dask",
    "netcdf4",
    "bottleneck",
    "ipykernel",
    "matplotlib",
    "geojson",
    "pytest",
    "coverage",
]


[project.optional-dependencies]
dev = ["flit", "black", "pytest", "coverage[toml]", "sphinx", "myst-parser", "myst-nb", "sphinx-autoapi", "furo", "sphinx_rtd_theme"]


[project.urls]
Home = "https://github.com/IHCantabria/pyteseo"
Documentation = "https://ihcantabria.github.io/pyteseo"


[project.scripts]
pyteseo-test = "pyteseo.__init__:test"
pyteseo-coverage = "pyteseo.__init__:coverage"
pyteseo-coverage-html = "pyteseo.__init__:coverage_html"


[tool.pytest.ini_options]
addopts = "-v --durations=0 --durations-min=0.05"
testpaths = ["tests"]

[tool.coverage.run]
command_line = "-m pytest"
